--- a/Test/index.html
+++ b/Test/index.html
@@ -73,7 +73,7 @@
 
             <div class="row">
                 <div class="campus-col">
-                    <img src="img/london.png">
+                    <img src="img/JS certificate.png">
                     <div class="layer">
                         <h3>LONDON</h3>
                     </div>
